chore(condo): fix ui affix jumping

--- a/packages/ui/src/components/ActionBar/style.less
+++ b/packages/ui/src/components/ActionBar/style.less
@@ -8,6 +8,10 @@
 @condo-action-bar-width: calc(100% + @condo-action-bar-overflow-width * 2);
 @condo-action-bar-large-screen-bottom-indent: @condo-global-spacing-24;
 
+.condo-affix-placeholder {
+  height: @condo-action-bar-large-screen-bottom-indent;
+}
+
 .condo-affix-content-wrapper {
   box-sizing: border-box;
   height: fit-content !important;
